test/decl/nested/type_in_extension.code
// RUN: %target-typecheck-verify-language

struct G<T> {}

extension G {
  struct H<U> {
    fn usesBoth<T1, U1>(t: T1, u: U1) -> (T1, U1) {}
  }
}

extension { // expected-error {{expected type name in extension declaration}}
  struct S<T> {
    fn foo(t: T) {}
  }

  class M : S {}

  protocol P {
    associatedtype A
  }
}
